<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".RegisterFragment">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="315dp"
        android:background="@drawable/fondo_circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:gravity="center_horizontal"
        android:text="@string/nombre_app2"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/later"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="375dp"
        android:layout_marginTop="264dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/btn_student"
                    android:layout_width="254dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/blue_90"
                    android:text="Student"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:gravity="left"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_teacher"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/blue_200"
                    android:text="Teacher"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:hint="@string/nombre"
                android:minHeight="48dp"
                android:paddingTop="20dp"
                android:backgroundTint="@color/purple_medium"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/purple_medium"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_usuario"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:hint="@string/username"
                android:minHeight="48dp"
                android:backgroundTint="@color/purple_medium"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/purple_medium"/>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>