<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".UploadDashboardStudentFragment">

    <ImageView
        android:id="@+id/buscadorStudenmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:src="@drawable/group_26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/buscadorStudenmt">



       <TextView
        android:id="@+id/uploadTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/beginDashboard"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextView"
        app:layout_constraintStart_toEndOf="@+id/beginTextView"
        app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            tools:ignore="ExtraText,TextSizeCheck">

            <TextView
                android:id="@+id/uploadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadDashboard"
                android:textColor="@color/purple_light"
                android:layout_marginStart="20dp"
                android:textStyle="bold" />


            <View
                android:id="@+id/lineViewUpload"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_marginStart="22dp"
                android:background="@android:color/holo_purple" />

        </LinearLayout>
        <TextView
            android:id="@+id/editTextViewUpload"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/editDashboard"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uploadTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/Title"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/UploadFiles"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/upload_files"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/image_uploadFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/group_27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadFiles"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/blue_200"
        android:text="Upload"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_uploadFiles" />

</androidx.constraintlayout.widget.ConstraintLayout>